5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1674_1100.log
== TEST (2019-04-25 11:36:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor:"))

Tartaruga= 2
Garca= 5
Arara= 10
Mico-leao-dourado=20
Onca-pintada=50
Garoupa= 100

if(cedula==2):
	print("Entrada:",cedula)
	print("Animal:",Tartaruga)
elif(cedula==5):
	print("Entrada:",cedula)
	print("Entrada:",Garca)
elif(cedula==10):
	print("Entrada:",cedula)
	print("Entrada",Arara)
elif(cedula==20):
	print("Entrada:",cedula)
	print("Entrada:",Mico-leao-dourado)
elif(cedula==50):
	print("Entrada:",cedula)
	print("Entrada:",Onca-pintada)
elif(cedula==100):
	print("Entrada:",cedula)
	print("Entrada:",Garoupa)
-- ERROR:
File "XXXX", line 9
    Mico-leao-dourado=20
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:40:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor:"))

Tartaruga= 2
Garca= 5
Arara= 10
Mico-leao-dourado=20
Onca-pintada=50
Garoupa= 100

if(cedula==2):
	print("Entrada:",cedula)
	print("Animal:",Tartaruga)
elif(cedula==5):
	print("Entrada:",cedula)
	print("Entrada:",Garca)
elif(cedula==10):
	print("Entrada:",cedula)
	print("Entrada",Arara)
elif(cedula==20):
	print("Entrada:",cedula)
	print("Entrada:",Mico-leao-dourado)
elif(cedula==50):
	print("Entrada:",cedula)
	print("Entrada:",Onca-pintada)
elif(cedula==100):
	print("Entrada:",cedula)
	print("Entrada:",Garoupa)
-- ERROR:
File "XXXX", line 9
    Mico-leao-dourado=20
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:44:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor:"))

Tartaruga= 2
Garca= 5
Arara= 10
Mico-leao-dourado=20
Onca-pintada=50
Garoupa= 100

if(cedula==2):
	print("Entrada:",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada:",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada:",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada:",cedula)
	print("Animal: Mico-leao-dourado)
elif(cedula==50):
	print("Entrada:",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada:",cedula)
	print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 24
    print("Animal: Mico-leao-dourado)
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:44:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor:"))

Tartaruga= 2
Garca= 5
Arara= 10
Mico-leao-dourado=20
Onca-pintada=50
Garoupa= 100

if(cedula==2):
	print("Entrada:",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada:",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada:",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada:",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada:",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada:",cedula)
	print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 9
    Mico-leao-dourado=20
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:48:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor:"))

Tartaruga= 2
Garca= 5
Arara= 10
Mico-leao-dourado=20
Onca-pintada=50
Garoupa= 100

if(cedula==2):
	print("Entrada:",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada:",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada:",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada:",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada:",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada:",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:",cedula)
	print("Animal: Invalido")
-- ERROR:
File "XXXX", line 9
    Mico-leao-dourado=20
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:48:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor:"))

Tartaruga= 2
Garca= 5
Arara= 10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa= 100

if(cedula==2):
	print("Entrada:",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada:",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada:",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada:",cedula)
	print("Animal: Mico_leao_dourado")
elif(cedula==50):
	print("Entrada:",cedula)
	print("Animal: Onca_pintada")
elif(cedula==100):
	print("Entrada:",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:",cedula)
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:49:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor:"))

Tartaruga= 2
Garca= 5
Arara= 10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa= 100

if(cedula==2):
	print("Entrada:",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada:",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada:",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada:",cedula)
	print("Animal: Mico_leao_dourado")
elif(cedula==50):
	print("Entrada:",cedula)
	print("Animal: Onca_pintada")
elif(cedula==100):
	print("Entrada:",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:",cedula)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.210762
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca_pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:49:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor:"))

Tartaruga= 2
Garca= 5
Arara= 10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa= 100

if(cedula==2):
	print("Entrada:",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada:",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada:",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada:",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada:",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada:",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:",cedula)
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:49:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor:"))

Tartaruga= 2
Garca= 5
Arara= 10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa= 100

if(cedula==2):
	print("Entrada:",cedula)
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Entrada:",cedula)
	print("Animal: Garca")
elif(cedula==10):
	print("Entrada:",cedula)
	print("Animal: Arara")
elif(cedula==20):
	print("Entrada:",cedula)
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Entrada:",cedula)
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Entrada:",cedula)
	print("Animal: Garoupa")
else:
	print("Entrada:",cedula)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.137362
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
